[tool.poetry]
name = "customtooltipqml"
version = "0.1.0"
description = "dicord enspired tooltip for qml"
authors = ["Nir <88795475+nrbnlulu@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.11"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
